# takeout2paperless

./: .gitignore  CHANGELOG.md  README.md  config.json  config.toml  main.py  pyproject.toml
config/: example.toml
src/paperless_py/: __init__.py  __main__.py  cli.py  extractor.py  reporter.py
src/takeout2paperless/: __init__.py  __main__.py  archive.py  cli.py  config.py  extractor.py
tests/: conftest.py  test_archive.py  test_config.py  test_extractor.py
