[project]
name = "paperless-py"
version = "0.3.0"
description = "Extract documents from Google Takeout archives for Paperless-ngx"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "py7zr>=1.1.3",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.15.20",
]

[project.scripts]
paperless-py = "paperless_py.cli:main"
takeout-extract = "paperless_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.14"
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
warn_unreachable = true
exclude = ["tests/"]
